--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
 <div class="container">
 	<script type="text/template" id="test">
 	<% for (var i = 0; i< data.length; i++) { %>
-
-		<h1><%= data[i].question %></h1>
-	<div class="form">
-      <input type="checkbox" id="variants<%= i %>">
-	  <label for="variants<%= i %>"><%= data[i].variants %></label>
-	  <input type="checkbox" id="variants<%= i %>">
-	  <label for="variants<%= i %>"><%= data[i].variants %></label>
-	  <input type="checkbox" id="variants<%= i %>">
-	  <label for="variants<%= i %>"><%= data[i].variants %></label>
- </div>
-	<% }; %>
+    <h1><%= data[i].question %></h1>
+    <div class="form">
+      <% for (var j = 0; j< data[i].variants.length; j++) { %>
+      <input type="checkbox" name="variant[<%= i %>][<%= j %>]" id="variant_<%= i %>_<%= j %>">
+      <label for="variant_<%= i %>_<%= j %>"><%= data[i].variants[j] %></label>
+      <% }; %>
+   </div>
+ <% }; %>
 	</script>
 	<button value="check">Проверить мои результаты</button>
 </div>
